<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/songLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:background="@android:color/background_light"
    android:orientation="horizontal"
    android:paddingBottom="2dp">

    <ImageView
        android:id="@+id/songCoverimageView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/songNametextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/song_name"
            android:textAlignment="center"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/artistNametextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/artist_name"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/playimageButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/play"
            tools:ignore="ContentDescription,NestedWeights" />

        <TextView
            android:id="@+id/durationtextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/duration"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/downloadimageButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/download"
            tools:ignore="ContentDescription,NestedWeights" />

        <TextView
            android:id="@+id/sizetextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/size"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>